--- a/src/templates/items/fragments/vehicle-base.html
+++ b/src/templates/items/fragments/vehicle-base.html
@@ -85,4 +85,15 @@
         />
   </div>
 
+
+  <!-- destroyed --> 
+  <div class="flex flex-row items-center">
+    {{localize 'swnr.sheet.ship.destroyed'}}:
+        <input
+          type="checkbox"
+          name="data.destroyed"
+          {{checked data.data.destroyed}}
+        />
+  </div>
+
 </div>
