--- a/src/templates/items/fragments/vehicle-base.html
+++ b/src/templates/items/fragments/vehicle-base.html
@@ -96,4 +96,33 @@
         />
   </div>
 
+  <!-- costMultiplier --> 
+  <div class="flex flex-row items-center">
+    {{localize 'swnr.sheet.ship.costMultiplier'}}:
+        <input
+          type="checkbox"
+          name="data.costMultiplier"
+          {{checked data.data.costMultiplier}}
+        />
+  </div>
+
+  <!-- powerMultiplier --> 
+  <div class="flex flex-row items-center">
+    {{localize 'swnr.sheet.ship.powerMultiplier'}}:
+        <input
+          type="checkbox"
+          name="data.powerMultiplier"
+          {{checked data.data.powerMultiplier}}
+        />
+  </div>
+
+  <!-- massMultiplier --> 
+  <div class="flex flex-row items-center">
+    {{localize 'swnr.sheet.ship.massMultiplier'}}:
+        <input
+          type="checkbox"
+          name="data.massMultiplier"
+          {{checked data.data.massMultiplier}}
+        />
+  </div>
 </div>
