--- a/src/templates/chat/attack-roll.html
+++ b/src/templates/chat/attack-roll.html
@@ -1,5 +1,6 @@
 <div>
-  <h3>{{ weapon.name }}</h3>
+  <h3 title="{{ weapon.data.data.description }}">{{ weapon.name }}</h3>
+
   <span title="{{ diceTooltip.hitExplain }}">{{{ diceTooltip.hit }}}</span>
   <span>{{localize 'swnr.weapon.shock.damage'}}:</span>
   <span title="{{ diceTooltip.damageExplain }}">{{{ diceTooltip.damage }}}</span>
@@ -12,5 +13,8 @@
     {{localize 'swnr.weapon.ammo'}}: {{ weapon.data.data.ammo.value }}/{{
     weapon.data.data.ammo.max }}
   </div>
+  {{/if}}
+  {{#if weapon.data.data.qualities}}
+     <div>{{localize 'swnr.sheet.ship.qualities'}}: {{ weapon.data.data.qualities }}</div>
   {{/if}}
 </div>
