adding ammo reload button to ships

--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -354,6 +354,12 @@
                             {{item.data.data.qualities}}
                           </div>
                           <div class="item-controls">
+                            {{#if (ne item.data.data.ammo.type "none")}}
+                              <a class="item-control item-reload text-gray-600 hover:text-purple-800 transition-colors"
+                                title="{{localize 'swnr.sheet.reload-item'}}">
+                                <i class="fas fa-retweet"></i>
+                              </a>
+                            {{/if}}
                             <a class="item-control item-toggle-broken  {{#unless item.data.data.broken}}item-working{{/unless}}"
                               title='{{localize 'swnr.sheet.break-item'}}'>
                               <i
