typo fixes and system drive

--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -495,19 +495,19 @@
             <div class="flex flex-col">
               <div class="flex flexrow">
                   <!--last Main-->
-                  <div class="lastMaintanence flex flex-col items-center">
+                  <div class="lastMaintenance flex flex-col items-center">
                     <input
                       class="w-24 text-center px-1.5 py-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-                      type="string" min="0" name="data.lastMaintanence" value="{{actor.data.data.lastMaintanence}}" />
-                    <label>{{localize 'swnr.sheet.ship.last-maintanence'}}</label>
+                      type="string" min="0" name="data.lastMaintenance" value="{{actor.data.data.lastMaintenance}}" />
+                    <label>{{localize 'swnr.sheet.ship.last-maintenance'}}</label>
                   </div>
 
-                  <!--maintanenceCost-->
-                  <div class="maintanenceCost flex flex-col items-center">
+                  <!--maintenanceCost-->
+                  <div class="maintenanceCost flex flex-col items-center">
                     <input
                       class="w-24 text-center px-1.5 py-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-                      type="number" min="0" name="data.maintanenceCost" value="{{actor.data.data.maintanenceCost}}" />
-                    <label>{{localize 'swnr.sheet.ship.maintanence-cost'}}</label>
+                      type="number" min="0" name="data.maintenanceCost" value="{{actor.data.data.maintenanceCost}}" />
+                    <label>{{localize 'swnr.sheet.ship.maintenance-cost'}}</label>
                   </div>
 
                   <!--cost-->
