ship notes tab UI fix

--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -491,7 +491,7 @@
               </div>
             </div>
           </div>
-          <div class="tab notes min-h-full" data-group="primary" data-tab="notes">
+          <div class="tab shipnotes min-h-full" data-group="primary" data-tab="notes">
             <div class="flex flex-col">
               <div class="flex flexrow">
                   <!--last Main-->
@@ -526,7 +526,7 @@
               </div>
               <div class="grid grid-cols-2">
                 <!-- Description -->
-                <div class="pr-0.5 text-lg">
+                <div class="pr-0.5">
                   Description
                   <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
                     {{editor content=data.data.description target="data.description" button=true
@@ -534,7 +534,7 @@
                   </div>
                 </div>
                 <!-- Mods -->
-                <div class="pr-0.5 text-lg">
+                <div class="pr-0.5">
                   Mods
                   <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
                     {{editor content=data.data.mods target="data.mods" button=true
